--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,16 @@
         android:theme="@style/Theme.ProjetoInterdisciplinar"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity4"
+            android:name=".Home"
             android:exported="false" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".Register"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".Login"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Loading"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
