--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.ProjetoInterdisciplinar"
         tools:targetApi="31">
         <activity
+            android:name=".Perfil"
+            android:exported="false" />
+        <activity
+            android:name=".Offline"
+            android:exported="false" />
+        <activity
             android:name=".Home"
             android:exported="false" />
         <activity
