Dando commit com a camera e galeria funcionando

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
     <uses-feature
         android:name="android.hardware.camera"
+        android:hardwareAccelerated="false"
         android:required="true" />
 
     <application
